# Espresso

./: .clang-tidy  .gitignore  .gitmodules  meson.build
espresso/components/: Camera.cpp  Camera.h  Component.h  Transform.cpp  Transform.h
espresso/core/: Application.cpp  Application.h  ApplicationInfo.h  Entity.cpp  Entity.h  EntryPoint.h  EventManager.cpp  EventManager.h  Logger.h  Object.h  Scene.h  Window.cpp  Window.h
espresso/graphics/: Renderer.cpp  Renderer.h
espresso/graphics/noop/: NoOpRenderer.cpp  NoOpRenderer.h
espresso/input/: Input.cpp  Input.h  Keycode.h  MouseButton.h
espresso/utils/: Demangle.h  EventHandler.cpp  EventHandler.h  StringUtils.h
espresso/utils/assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Texture.h
espresso/utils/math/: Color.h  Math.cpp  Math.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
espresso/utils/memory/: Ref.h
espresso/utils/threading/: RenderSystem.cpp  RenderSystem.h  Scheduler.cpp  Scheduler.h  System.cpp  System.h  SystemManager.h  ThreadTime.h  TickSystem.cpp  TickSystem.h
sandbox/: main.cpp
subprojects/rapidjson/: meson.build
tools/: compresser.cpp
